# semble

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
benchmarks/: README.md  context_efficiency.py  data.py  plot.py  repos.json  run_benchmark.py  speed_benchmark.py  token_efficiency.py
benchmarks/annotations/: aiohttp.json  alamofire.json  axios.json  cats.json  chi.json  cobra.json  commons-lang.json  express.json  fastapi.json  flask.json  gin.json  gson.json  guzzle.json  httpx.json  jackson-databind.json  ktor.json  laravel-framework.json  messagepack-csharp.json  model2vec.json  monolog.json  pydantic.json  rack.json  rails.json  redux.json  requests.json  sinatra.json  starlette.json  tokio.json  trpc.json
benchmarks/baselines/: ablations.py  coderankembed.py
benchmarks/results/: 40a76927ded9.json  context-efficiency-judge-6248855cfef8.json  context-efficiency-judge-records-6248855cfef8.jsonl  context-efficiency-recall-6248855cfef8.json  f028a753fd5d.json  token-efficiency-6d7dea15950e.json
examples/opencode/: code_search.ts  code_search_related.ts
src/semble/: cache.py  cli.py  file_walker.py  index.py  locations.py  mcp.py  output.py  search.py  source.py  types.py
src/semble/index/: create.py  dense.py  index.py  sparse.py
src/semble/ranking/: __init__.py  boosting.py
tests/: test_cache.py  test_chunker.py  test_cli.py  test_index.py  test_locations.py  test_mcp.py  test_output.py  test_ranking.py  test_search.py  test_source.py
