[project]
name = "semble"
description = "Instant local code search for agents."
authors = [{name = "Thomas van Dongen", email = "thomas123@live.nl"}, { name = "Stéphan Tulkens", email = "stephantul@gmail.com"}]
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["code-search", "embeddings", "model2vec", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
]
dependencies = [
    "model2vec>=0.4.0",
    "vicinity>=0.4.4",
    "numpy>=1.24.0",
    "bm25s>=0.2.0",
    "chonkie[code]>=1.6.2",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "mypy>=1.0",
    "pydoclint>=0.5.3",
    "pre-commit>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/MinishLab"
"Bug Reports" = "https://github.com/MinishLab/semble/issues"
"Source" = "https://github.com/MinishLab/semble"

[project.scripts]
semble = "semble.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.setuptools.dynamic]
version = {attr = "semble.version.__version__"}

[tool.ruff]
exclude = [".venv/"]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"src/semble/cli.py" = ["T20"]
"benchmarks/*.py" = ["T20"]

[tool.ruff.lint]
select = [
    # Annotations: Enforce type annotations
    "ANN",
    # Complexity: Enforce a maximum cyclomatic complexity
    "C90",
    # Pydocstyle: Enforce docstrings
    "D",
    # Isort: Enforce import order
    "I",
    # Numpy: Enforce numpy style
    "NPY",
    # Print: Forbid print statements
    "T20",
]
ignore = [
    # Allow Any type
    "ANN401",
    # Pydocstyle ignores
    "D100", "D101", "D104", "D203", "D213", "D401",
]

[tool.pydoclint]
style = "sphinx"
exclude = "test_"
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false
require-return-section-when-returning-nothing = false

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "--strict-markers", "--cov=src", "--cov-report=term-missing"]

[tool.coverage.report]
skip_covered = true
exclude_also = ["if __name__ == .__main__.:", "@abstractmethod"]
